1_PiConfigFiles/iptables.conf
# Generated by iptables-save v1.4.21 on Sat Jul  1 22:10:40 2017
#/etc/iptables.conf                                                                 
*filter
:INPUT ACCEPT [1443:140815]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [941:156211]
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -j ACCEPT
COMMIT
# Completed on Sat Jul  1 22:10:40 2017
# Generated by iptables-save v1.4.21 on Sat Jul  1 22:10:40 2017
*nat
:PREROUTING ACCEPT [23:2000]
:INPUT ACCEPT [17:1652]
:OUTPUT ACCEPT [15:1624]
:POSTROUTING ACCEPT [0:0]
:FORWARD - [0:0]
-A OUTPUT -d 2.13.255.0/30 -o ipsec0 -j ACCEPT
-A POSTROUTING -s 10.213.XX.0/24 -d 2.13.255.0/30 -j ACCEPT
-A POSTROUTING -j MASQUERADE
-A POSTROUTING -o wlan0 -j MASQUERADE
-A FORWARD -d 2.13.255.0/30 -i eth0 -o ipsec0 -j ACCEPT
-A FORWARD -d 10.213.XX.0/24 -i ipsec0 -o eth0 -j ACCEPT
COMMIT
# Completed on Sat Jul  1 22:10:40 2017
